repaired 360px width vol2

--- a/styles/components/_header.scss
+++ b/styles/components/_header.scss
@@ -120,7 +120,8 @@
     }
 
     @media only screen and (max-width: 360px) {
-      margin-left: 3.2rem;
+      margin-left: 5.2rem;
+      padding: 12.2px 0 0 0;
     }
   }
 
@@ -189,12 +190,7 @@
 
     @media only screen and (max-width: 360px) {
       padding: 24.9px 20px;
-      margin-right: 3.4rem;
-    }
-
-    @media only screen and (max-width: 360px) {
-      padding: 24.9px 20px;
-      margin-right: 3.2rem;
+      margin-right: 4.4rem;
     }
 
     margin-right: 0.7rem;
