--- a/styles/components/_gridbox.scss
+++ b/styles/components/_gridbox.scss
@@ -42,6 +42,10 @@
             box-shadow: none;
         }
 
+        @include respond(phone-xsl) {
+            border-radius: 0px 0px 0px 0px;
+        }
+
         &__details {
             padding: 2.15rem 4.2rem 5.4rem 4.2rem;
 
