--- a/styles/components/_info.scss
+++ b/styles/components/_info.scss
@@ -68,5 +68,9 @@
     @include respond(phone-xsl) {
       width: 22.4rem;
     }
+
+    @include respond(phone-xs) {
+      width: 19.4rem;
+    }
   }
 }
