--- a/styles/components/_footer.scss
+++ b/styles/components/_footer.scss
@@ -1,38 +1,42 @@
 .section-footer {
-    grid-column: full-start / full-end;
-    grid-row: 4 / 5;
+  grid-column: full-start / full-end;
+  grid-row: 4 / 5;
 
-    background-color: $blue_color;
+  background-color: $blue_color;
 
-    .footer {
-        padding: 10.2rem 7.2rem 3.4rem 7.2rem;
+  .footer {
+    padding: 10.2rem 7.2rem 3.4rem 7.2rem;
 
-        &__details {
-            & > h4 {
-                margin-bottom: 1rem;
-                color: rgba(255, 255, 255, 0.7);
-                font-weight: 400;
-                font-size: 1.2rem;
-
-                // @include respond(tab-land-sm) {
-                //     font-weight: 400;
-                // }
-            }
-
-            & > p {
-                color: rgba(255, 255, 255, 0.4);
-                text-align: center;
-                max-width: 24rem;
-                font-weight: 100;
-                line-height: 1.4rem;
-                font-family: "Raleway", sans-serif;
-                font-size: 1.2rem;
-            }
-
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-        }
+    @include respond(phone-xs) {
+        padding: 10.2rem 1rem 3.4rem 1rem;
     }
+
+    &__details {
+      & > h4 {
+        margin-bottom: 1rem;
+        color: rgba(255, 255, 255, 0.7);
+        font-weight: 400;
+        font-size: 1.2rem;
+
+        // @include respond(tab-land-sm) {
+        //     font-weight: 400;
+        // }
+      }
+
+      & > p {
+        color: rgba(255, 255, 255, 0.4);
+        text-align: center;
+        max-width: 24rem;
+        font-weight: 100;
+        line-height: 1.4rem;
+        font-family: "Raleway", sans-serif;
+        font-size: 1.2rem;
+      }
+
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+  }
 }
