--- a/styles/main.css
+++ b/styles/main.css
@@ -462,6 +462,8 @@ body {
   -ms-grid-row: 2;
   -ms-grid-row-span: 1;
   grid-row: 2 / 3;
+  overflow-x: hidden;
+  overflow-y: hidden;
   position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -469,9 +471,15 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+}
+
+.section-carousel .hide {
+  width: 100%;
+  height: 2rem;
+  background-color: white;
+  z-index: 10;
+  position: absolute;
+  bottom: -0.1rem;
 }
 
 .section-carousel::before {
@@ -495,8 +503,187 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 1;
-  background-color: rgba(88, 99, 248, 0.5);
+  z-index: 2;
+  background-color: rgba(88, 99, 248, 0.3);
+}
+
+.section-carousel .dots {
+  width: 100%;
+  position: absolute;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  left: 50%;
+  bottom: 6rem;
+  z-index: 5;
+  display: none;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+@media only screen and (max-width: 520px) {
+  .section-carousel .dots {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
+.section-carousel .dots .dot {
+  width: 1.2rem;
+  height: 1.2rem;
+  border-radius: 50%;
+  background-color: grey;
+  border: none;
+}
+
+.section-carousel .dots .dot:not(:last-child) {
+  margin-right: 2.4rem;
+}
+
+.section-carousel .dots .dot:active, .section-carousel .dots .dot:focus {
+  background-color: white;
+}
+
+.section-carousel .slider {
+  width: 100%;
+  max-width: 1200px;
+  height: 400px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  overflow-x: auto;
+  overflow-y: hidden;
+  -ms-scroll-snap-type: x mandatory;
+      scroll-snap-type: x mandatory;
+  scroll-behavior: smooth;
+  position: relative;
+  z-index: 5;
+}
+
+.section-carousel .slide {
+  scroll-snap-align: center;
+  width: 100%;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+  height: 100%;
+  overflow-y: hidden;
+  position: relative;
+  padding-left: 10rem;
+  font-family: "Poppins", sans-serif;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+@media only screen and (max-width: 520px) {
+  .section-carousel .slide > * {
+    -webkit-transform: translateY(-2.5rem);
+            transform: translateY(-2.5rem);
+  }
+}
+
+@media only screen and (max-width: 520px) {
+  .section-carousel .slide {
+    padding-left: 5rem;
+  }
+}
+
+.section-carousel .slide__prev, .section-carousel .slide__next {
+  text-decoration: none;
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  font-size: 5rem;
+  font-weight: 500;
+  color: #FFFFFF;
+}
+
+@media only screen and (max-width: 520px) {
+  .section-carousel .slide__prev, .section-carousel .slide__next {
+    display: none;
+  }
+}
+
+.section-carousel .slide__prev {
+  left: 3rem;
+}
+
+.section-carousel .slide__next {
+  right: 3rem;
+}
+
+.section-carousel .slide__paragraph {
+  color: #FFFFFF;
+  font-weight: 100;
+  line-height: 2.4rem;
+  font-size: 1.8rem;
+  text-transform: uppercase;
+}
+
+.section-carousel .slide__h1 {
+  font-weight: 700;
+  color: #FFFFFF;
+  font-size: 3.2rem;
+  line-height: 5.3rem;
+}
+
+@media only screen and (max-width: 360px) {
+  .section-carousel .slide__h1 {
+    width: 211px;
+    line-height: 3.2rem;
+    margin-bottom: 1rem;
+  }
+}
+
+.section-carousel .slide__h4 {
+  color: #FFFFFF;
+  font-weight: 500;
+  font-size: 1.8rem;
+  line-height: 2rem;
+}
+
+.section-carousel .slide__h5 {
+  font-size: 1.8rem;
+  font-weight: 100;
+  line-height: 2rem;
+  color: #FFFFFF;
+}
+
+.section-carousel .slide__btn {
+  margin-top: 3.6rem;
+  border: 2px solid #ffffff;
+  border-radius: 4px;
+  color: #FFFFFF;
+  font-size: 1.6rem;
+  font-weight: 700;
+  padding: 1.3rem 3rem;
+  text-align: center;
+  background-color: transparent;
+  cursor: pointer;
+  text-transform: uppercase;
+}
+
+@media only screen and (max-width: 360px) {
+  .section-carousel .slide__btn {
+    margin-top: 2.5rem;
+  }
+}
+
+.section-carousel .slide__btn:hover {
+  background-color: #FFFFFF;
+  color: rgba(88, 99, 248, 0.5);
 }
 
 .section-footer {
@@ -1018,244 +1205,5 @@ body {
 #menuToggle input:checked ~ ul {
   -webkit-transform: none;
           transform: none;
-}
-
-.carousel > input[type="radio"]:nth-child(1):checked ~ .carousel__prev > label:nth-child(5), .carousel > input[type="radio"]:nth-child(1):checked ~ .carousel__next > label:nth-child(2), .carousel > input[type="radio"]:nth-child(2):checked ~ .carousel__prev > label:nth-child(1), .carousel > input[type="radio"]:nth-child(2):checked ~ .carousel__next > label:nth-child(3), .carousel > input[type="radio"]:nth-child(3):checked ~ .carousel__prev > label:nth-child(2), .carousel > input[type="radio"]:nth-child(3):checked ~ .carousel__next > label:nth-child(4), .carousel > input[type="radio"]:nth-child(4):checked ~ .carousel__prev > label:nth-child(3), .carousel > input[type="radio"]:nth-child(4):checked ~ .carousel__next > label:nth-child(5), .carousel > input[type="radio"]:nth-child(5):checked ~ .carousel__prev > label:nth-child(4), .carousel > input[type="radio"]:nth-child(5):checked ~ .carousel__next > label:nth-child(1) {
-  opacity: 1 !important;
-  z-index: 3;
-}
-
-.container {
-  width: 100%;
-  max-width: 1200px;
-  margin: 50px auto;
-}
-
-.carousel {
-  width: 100%;
-  position: relative;
-  overflow: hidden;
-}
-
-.carousel > input[type="radio"] {
-  position: absolute;
-  left: 0;
-  opacity: 0;
-  top: 0;
-}
-
-.carousel > input[type="radio"]:checked ~ .carousel__items .carousel__item,
-.carousel > input[type="radio"]:checked ~ .carousel__prev > label,
-.carousel > input[type="radio"]:checked ~ .carousel__next > label {
-  opacity: 0;
-}
-
-.carousel > input[type="radio"]:nth-child(1):checked ~ .carousel__items .carousel__item:nth-child(1) {
-  opacity: 1;
-}
-
-.carousel > input[type="radio"]:nth-child(1):checked ~ .carousel__nav > label:nth-child(1) {
-  background: #ccc;
-  cursor: default;
-  pointer-events: none;
-}
-
-.carousel > input[type="radio"]:nth-child(2):checked ~ .carousel__items .carousel__item:nth-child(2) {
-  opacity: 1;
-}
-
-.carousel > input[type="radio"]:nth-child(2):checked ~ .carousel__nav > label:nth-child(2) {
-  background: #ccc;
-  cursor: default;
-  pointer-events: none;
-}
-
-.carousel > input[type="radio"]:nth-child(3):checked ~ .carousel__items .carousel__item:nth-child(3) {
-  opacity: 1;
-}
-
-.carousel > input[type="radio"]:nth-child(3):checked ~ .carousel__nav > label:nth-child(3) {
-  background: #ccc;
-  cursor: default;
-  pointer-events: none;
-}
-
-.carousel > input[type="radio"]:nth-child(4):checked ~ .carousel__items .carousel__item:nth-child(4) {
-  opacity: 1;
-}
-
-.carousel > input[type="radio"]:nth-child(4):checked ~ .carousel__nav > label:nth-child(4) {
-  background: #ccc;
-  cursor: default;
-  pointer-events: none;
-}
-
-.carousel > input[type="radio"]:nth-child(5):checked ~ .carousel__items .carousel__item:nth-child(5) {
-  opacity: 1;
-}
-
-.carousel > input[type="radio"]:nth-child(5):checked ~ .carousel__nav > label:nth-child(5) {
-  background: #ccc;
-  cursor: default;
-  pointer-events: none;
-}
-
-.carousel__items {
-  margin: 0;
-  padding: 0;
-  list-style-type: none;
-  width: 100%;
-  height: 40rem;
-  position: relative;
-}
-
-.carousel__items__item {
-  font-family: 'Poppins', sans-serif;
-  margin-left: 10rem;
-  -ms-flex-negative: 0;
-      flex-shrink: 0;
-  height: 100%;
-  width: 100%;
-  position: relative;
-  z-index: 2;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-.carousel__items__item__caption {
-  text-transform: uppercase;
-  font-size: 1.8rem;
-}
-
-.carousel__items__item__h1 {
-  font-size: 3.2rem;
-  font-weight: 700;
-  margin-bottom: .13rem;
-}
-
-.carousel__items__item__h2 {
-  font-size: 2.8rem;
-  font-weight: 500;
-}
-
-.carousel__items__item__data {
-  font-size: 2.8rem;
-  font-weight: 100;
-}
-
-.carousel__items__item__btn {
-  background-color: transparent;
-  border: 0.2rem solid #FFFFFF;
-  border-radius: 4px;
-  padding: 1.3rem 3rem;
-  margin-top: 2rem;
-  color: #FFFFFF;
-  text-align: center;
-  text-transform: uppercase;
-  font-size: 1.6rem;
-  font-weight: 700;
-  cursor: pointer;
-}
-
-.carousel__item {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 1;
-  transition: opacity 2s;
-  -webkit-transition: opacity 2s;
-}
-
-.carousel__item img {
-  width: 100%;
-  vertical-align: middle;
-}
-
-.carousel__prev > label, .carousel__next > label {
-  border-radius: 50%;
-  cursor: pointer;
-  display: block;
-  width: 40px;
-  height: 40px;
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  -webkit-transform: translateY(-50%);
-  transition: all .3s ease;
-  -webkit-transition: all .3s ease;
-  opacity: 0;
-  z-index: 2;
-}
-
-.carousel__prev > label:hover, .carousel__prev > label:focus, .carousel__next > label:hover, .carousel__next > label:focus {
-  opacity: .5 !important;
-}
-
-.carousel__prev > label:before, .carousel__prev > label:after, .carousel__next > label:before, .carousel__next > label:after {
-  content: "";
-  position: absolute;
-  width: inherit;
-  height: inherit;
-}
-
-.carousel__prev > label:before, .carousel__next > label:before {
-  background: -webkit-gradient(linear, left bottom, left top, from(#fff), color-stop(10%, #fff), color-stop(10%, rgba(51, 51, 51, 0))), -webkit-gradient(linear, right top, left top, from(#fff), color-stop(10%, #fff), color-stop(10%, rgba(51, 51, 51, 0)));
-  background: linear-gradient(to top, #fff 0%, #fff 10%, rgba(51, 51, 51, 0) 10%), linear-gradient(to left, #fff 0%, #fff 10%, rgba(51, 51, 51, 0) 10%);
-  width: 60%;
-  height: 60%;
-  top: 20%;
-}
-
-.carousel__prev > label {
-  left: 2%;
-}
-
-.carousel__prev > label:before {
-  left: 35%;
-  top: 20%;
-  transform: rotate(135deg);
-  -webkit-transform: rotate(135deg);
-}
-
-.carousel__next > label {
-  right: 2%;
-}
-
-.carousel__next > label:before {
-  left: 10%;
-  transform: rotate(315deg);
-  -webkit-transform: rotate(315deg);
-}
-
-.carousel__nav {
-  position: absolute;
-  bottom: 10%;
-  left: 0;
-  text-align: center;
-  width: 100%;
-  z-index: 3;
-}
-
-.carousel__nav > label {
-  border: 1px solid #fff;
-  display: inline-block;
-  border-radius: 50%;
-  cursor: pointer;
-  margin: 0 .125%;
-  width: 20px;
-  height: 20px;
 }
 /*# sourceMappingURL=main.css.map */
