--- a/styles/components/_carousel.scss
+++ b/styles/components/_carousel.scss
@@ -1,12 +1,22 @@
 .section-carousel {
   grid-column: full-start / full-end;
   grid-row: 2 / 3;
+
+  overflow-x: hidden;
+  overflow-y: hidden;
   position: relative;
 
   display: flex;
   justify-content: center;
-  align-items: center;
 
+  .hide {
+    width: 100%;
+    height: 2rem;
+    background-color: rgba(255, 255, 255, 1);
+    z-index: 10;
+    position: absolute;
+    bottom: -0.1rem;
+  }
 
   &::before {
     content: "";
@@ -32,176 +42,162 @@
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 1;
+    z-index: 2;
 
-    background-color: rgba(88, 99, 248, 0.5);
+    background-color: rgba(88, 99, 248, 0.3);
+  }
+
+  .dots {
+    width: 100%;
+    position: absolute;
+    transform: translateX(-50%);
+    left: 50%;
+    bottom: 6rem;
+    z-index: 5;
+
+    display: none;
+    @media only screen and (max-width: 520px) {
+      display: flex;
+    }
+    justify-content: center;
+
+    .dot {
+      width: 1.2rem;
+      height: 1.2rem;
+      border-radius: 50%;
+      background-color: grey;
+      border: none;
+
+      &:not(:last-child) {
+        margin-right: 2.4rem;
+      }
+
+      &:active,
+      &:focus {
+        background-color: white;
+      }
+    }
+  }
+
+  .slider {
+    width: 100%;
+    max-width: 1200px;
+    height: 400px;
+    display: flex;
+    overflow-x: auto;
+    overflow-y: hidden;
+    scroll-snap-type: x mandatory;
+    scroll-behavior: smooth;
+
+    position: relative;
+    z-index: 5;
+  }
+
+  .slide {
+    scroll-snap-align: center;
+    width: 100%;
+    flex-shrink: 0;
+    height: 100%;
+    overflow-y: hidden;
+
+    position: relative;
+    padding-left: 10rem;
+
+    font-family: "Poppins", sans-serif;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+
+    & > * {
+      @media only screen and (max-width: 520px) {
+        transform: translateY(-2.5rem);
+      }
+    }
+
+    @media only screen and(max-width: 520px) {
+      padding-left: 5rem;
+    }
+
+    &__prev,
+    &__next {
+      @media only screen and(max-width: 520px) {
+        display: none;
+      }
+
+      text-decoration: none;
+      position: absolute;
+      top: 50%;
+      transform: translate(-50%, -50%);
+      font-size: 5rem;
+      font-weight: 500;
+      color: $white_color;
+    }
+
+    &__prev {
+      left: 3rem;
+    }
+
+    &__next {
+      right: 3rem;
+    }
+
+    &__paragraph {
+      color: $white_color;
+      font-weight: 100;
+      line-height: 2.4rem;
+      font-size: 1.8rem;
+      text-transform: uppercase;
+    }
+
+    &__h1 {
+      font-weight: 700;
+      color: $white_color;
+      font-size: 3.2rem;
+      line-height: 5.3rem;
+
+      @media only screen and (max-width: 360px) {
+        width: 211px;
+        line-height: 3.2rem;
+        margin-bottom: 1rem;
+      }
+    }
+
+    &__h4 {
+      color: $white_color;
+      font-weight: 500;
+      font-size: 1.8rem;
+      line-height: 2rem;
+    }
+
+    &__h5 {
+      font-size: 1.8rem;
+      font-weight: 100;
+      line-height: 2rem;
+      color: $white_color;
+    }
+
+    &__btn {
+      margin-top: 3.6rem;
+      border: 2px solid #ffffff;
+      border-radius: 4px;
+      color: $white_color;
+      font-size: 1.6rem;
+      font-weight: 700;
+      padding: 1.3rem 3rem;
+      text-align: center;
+      background-color: transparent;
+      cursor: pointer;
+      text-transform: uppercase;
+
+      @media only screen and (max-width: 360px) {
+        margin-top: 2.5rem;
+      }
+
+      &:hover {
+        background-color: $white_color;
+        color: rgba(88, 99, 248, 0.5);
+      }
+    }
   }
 }
-
-
-
-//   .carousel {
-//     width: 100%;
-//     max-width: 1200px;
-//     height: 70%;
-
-//     color: $white_color;
-
-//     display: flex;
-//     overflow-x: auto;
-//     -webkit-overflow-scrolling: touch;
-//     scroll-snap-type: x mandatory;
-//     scroll-behavior: smooth;
-
-//     position: relative;
-//     z-index: 2;
-
-//     &>&__item {
-//       scroll-snap-align: start;
-//     }
-
-//     &__item {
-
-//       font-family: 'Poppins', sans-serif;
-//       margin-left: 10rem;
-//       flex-shrink: 0;
-//       height: 100%;
-//       width: 100%;
-
-//       position: relative;
-
-//       display: flex;
-//       flex-direction: column;
-//       align-items: flex-start;
-//       justify-content: center;
-
-//       &__caption {
-//         text-transform: uppercase;
-//         font-size: 1.8rem;
-//       }
-
-//       &__h1 {
-//         font-size: 3.2rem;
-//         font-weight: 700;
-//         margin-bottom: .13rem;
-//       }
-
-//       &__h2 {
-//         font-size: 2.8rem;
-//         font-weight: 500;
-//       }
-
-//       &__data {
-//         font-size: 2.8rem;
-//         font-weight: 100;
-//       }
-
-//       &__btn {
-//         background-color: transparent;
-
-//         border: .2rem solid $white_color;
-//         border-radius: 4px;
-
-//         padding: 1.3rem 3rem;
-//         margin-top: 2rem;
-
-//         color: $white_color;
-//         text-align: center;
-//         text-transform: uppercase;
-//         font-size: 1.6rem;
-//         font-weight: 700;
-
-//         cursor: pointer;
-//       }
-
-//       &__prev,
-//       &__next {
-//         position: absolute;
-//         top: 50%;
-//         transform: translateY(-50%);
-
-//         width: 2rem;
-//         height: 2rem;
-//         border-radius: 50%;
-
-//         background-color: #fff;
-//       }
-
-//       &__prev {
-//         left: 0;
-//       }
-
-//       &__next {
-//         right: 22rem;
-//       }
-//     }
-//   }
-
-//   .carousel__dots {
-//     position: absolute;
-//     transform: translate(-50%, -50%);
-//     left: 50%;
-//     bottom: 4rem;
-
-//     z-index: 301;
-
-//     width: 100%;
-//     background-color: transparent;
-//     height: 3rem;
-
-//     display: flex;
-//     justify-content: center;
-//     align-items: center;
-
-//     &__dot {
-//       border-radius: 50%;
-
-//       width: 1.2rem;
-//       height: 1.2rem;
-
-//       background-color: $dark-grey-color;
-
-//       margin-left: 2.4rem;
-
-//       &:focus,
-//       &:active {
-//         background-color: $medium-grey-color;
-//       }
-//     }
-//   }
-// }
-
-// .carousel {
-//   grid-column: full-start / full-end;
-//   grid-row: 2 / 3;
-//   position: relative;
-
-//   &::before {
-//     content: "";
-//     height: 100%;
-//     width: 100%;
-
-//     position: absolute;
-//     top: 0;
-//     left: 0;
-//     z-index: 1;
-
-//     background-image: url("../../assets/img/JohnCleeseEricIdle.png");
-//     background-repeat: no-repeat;
-//     background-size: cover;
-//     background-position: 50%;
-//   }
-
-//   &::after {
-//     content: "";
-//     height: 100%;
-//     width: 100%;
-
-//     position: absolute;
-//     top: 0;
-//     left: 0;
-//     z-index: 1;
-
-//     background-color: rgba(88, 99, 248, 0.5);
-//   }
-// }
