--- a/styles/components/_carousel.scss
+++ b/styles/components/_carousel.scss
@@ -189,6 +189,8 @@
       background-color: transparent;
       cursor: pointer;
       text-transform: uppercase;
+      outline: none;
+      transition: .2s ease-in-out all;
 
       @media only screen and (max-width: 360px) {
         margin-top: 2.5rem;
