--- a/styles/main.css
+++ b/styles/main.css
@@ -673,6 +673,9 @@ body {
   background-color: transparent;
   cursor: pointer;
   text-transform: uppercase;
+  outline: none;
+  -webkit-transition: .2s ease-in-out all;
+  transition: .2s ease-in-out all;
 }
 
 @media only screen and (max-width: 360px) {
