--- a/styles/components/_carousel.scss
+++ b/styles/components/_carousel.scss
@@ -1,205 +1,301 @@
+.swiper-button-next,
+.swiper-button-prev {
+  color: #fff !important;
+}
+
 .section-carousel {
   grid-column: full-start / full-end;
   grid-row: 2 / 3;
+  background-color: rgba(3, 79, 151, 0.384);
 
-  overflow-x: hidden;
-  overflow-y: hidden;
-  position: relative;
+  // background-position: center;
+  // background-size: contain;
+  // background-image: url("../../assets/img/JohnCleeseEricIdle.png");
 
-  display: flex;
-  justify-content: center;
-
-  .hide {
-    width: 100%;
-    height: 2rem;
-    background-color: rgba(255, 255, 255, 1);
-    z-index: 10;
-    position: absolute;
-    bottom: -0.1rem;
-  }
-
-  &::before {
-    content: "";
+  .swiper-container {
+    z-index: 200;
     height: 100%;
-    width: 100%;
-
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 1;
-
-    background-image: url("../../assets/img/JohnCleeseEricIdle.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: 50%;
-  }
-
-  &::after {
-    content: "";
-    height: 100%;
-    width: 100%;
-
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 2;
-
-    background-color: rgba(88, 99, 248, 0.3);
-  }
-
-  .dots {
-    width: 100%;
-    position: absolute;
-    transform: translateX(-50%);
-    left: 50%;
-    bottom: 6rem;
-    z-index: 5;
-
-    display: none;
-    @media only screen and (max-width: 520px) {
-      display: flex;
-    }
-    justify-content: center;
-
-    .dot {
-      width: 1.2rem;
-      height: 1.2rem;
-      border-radius: 50%;
-      background-color: grey;
-      border: none;
-
-      &:not(:last-child) {
-        margin-right: 2.4rem;
-      }
-
-      &:active,
-      &:focus {
-        background-color: white;
-      }
-    }
-  }
-
-  .slider {
-    width: 100%;
     max-width: 1200px;
-    height: 400px;
-    display: flex;
-    overflow-x: auto;
-    overflow-y: hidden;
-    scroll-snap-type: x mandatory;
-    scroll-behavior: smooth;
 
-    position: relative;
-    z-index: 5;
-  }
+    .swiper-wrapper {
+      height: 100%;
 
-  .slide {
-    scroll-snap-align: center;
-    width: 100%;
-    flex-shrink: 0;
-    height: 100%;
-    overflow-y: hidden;
+      .swiper-slide {
+        height: 100%;
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
 
-    position: relative;
-    padding-left: 10rem;
+        .slide {
+          font-family: "Poppins", sans-serif;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: flex-start;
+          margin-left: 15rem;
 
-    font-family: "Poppins", sans-serif;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
+          &__paragraph {
+            color: $white_color;
+            font-weight: 100;
+            line-height: 2.4rem;
+            font-size: 1.8rem;
+            text-transform: uppercase;
+          }
 
-    & > * {
-      @media only screen and (max-width: 520px) {
-        transform: translateY(-2.5rem);
-      }
-    }
+          &__h1 {
+            font-weight: 700;
+            color: $white_color;
+            font-size: 3.2rem;
+            line-height: 5.3rem;
 
-    @media only screen and(max-width: 520px) {
-      padding-left: 5rem;
-    }
+            @media only screen and (max-width: 360px) {
+              width: 211px;
+              line-height: 3.2rem;
+              margin-bottom: 1rem;
+            }
+          }
 
-    &__prev,
-    &__next {
-      @media only screen and(max-width: 520px) {
-        display: none;
-      }
+          &__h4 {
+            color: $white_color;
+            font-weight: 500;
+            font-size: 1.8rem;
+            line-height: 2rem;
+          }
 
-      text-decoration: none;
-      position: absolute;
-      top: 50%;
-      transform: translate(-50%, -50%);
-      font-size: 5rem;
-      font-weight: 500;
-      color: $white_color;
-    }
+          &__h5 {
+            font-size: 1.8rem;
+            font-weight: 100;
+            line-height: 2rem;
+            color: $white_color;
+          }
 
-    &__prev {
-      left: 3rem;
-    }
+          &__btn {
+            margin-top: 3.6rem;
+            border: 2px solid #ffffff;
+            border-radius: 4px;
+            color: $white_color;
+            font-size: 1.6rem;
+            font-weight: 700;
+            padding: 1.3rem 3rem;
+            text-align: center;
+            background-color: transparent;
+            cursor: pointer;
+            text-transform: uppercase;
+            outline: none;
+            transition: 0.2s ease-in-out all;
 
-    &__next {
-      right: 3rem;
-    }
+            @media only screen and (max-width: 360px) {
+              margin-top: 2.5rem;
+            }
 
-    &__paragraph {
-      color: $white_color;
-      font-weight: 100;
-      line-height: 2.4rem;
-      font-size: 1.8rem;
-      text-transform: uppercase;
-    }
-
-    &__h1 {
-      font-weight: 700;
-      color: $white_color;
-      font-size: 3.2rem;
-      line-height: 5.3rem;
-
-      @media only screen and (max-width: 360px) {
-        width: 211px;
-        line-height: 3.2rem;
-        margin-bottom: 1rem;
-      }
-    }
-
-    &__h4 {
-      color: $white_color;
-      font-weight: 500;
-      font-size: 1.8rem;
-      line-height: 2rem;
-    }
-
-    &__h5 {
-      font-size: 1.8rem;
-      font-weight: 100;
-      line-height: 2rem;
-      color: $white_color;
-    }
-
-    &__btn {
-      margin-top: 3.6rem;
-      border: 2px solid #ffffff;
-      border-radius: 4px;
-      color: $white_color;
-      font-size: 1.6rem;
-      font-weight: 700;
-      padding: 1.3rem 3rem;
-      text-align: center;
-      background-color: transparent;
-      cursor: pointer;
-      text-transform: uppercase;
-      outline: none;
-      transition: .2s ease-in-out all;
-
-      @media only screen and (max-width: 360px) {
-        margin-top: 2.5rem;
-      }
-
-      &:hover {
-        background-color: $white_color;
-        color: rgba(88, 99, 248, 0.5);
+            &:hover {
+              background-color: $white_color;
+              color: rgba(88, 99, 248, 0.5);
+            }
+          }
+        }
       }
     }
   }
+
+  // overflow-x: hidden;
+  // overflow-y: hidden;
+  // position: relative;
+
+  // display: flex;
+  // justify-content: center;
+
+  // .hide {
+  //   width: 100%;
+  //   height: 2rem;
+  //   background-color: rgba(255, 255, 255, 1);
+  //   z-index: 10;
+  //   position: absolute;
+  //   bottom: -0.1rem;
+  // }
+
+  // &::before {
+  //   content: "";
+  //   height: 100%;
+  //   width: 100%;
+
+  //   position: absolute;
+  //   top: 0;
+  //   left: 0;
+  //   z-index: 1;
+
+  //   background-image: url("../../assets/img/JohnCleeseEricIdle.png");
+  //   background-repeat: no-repeat;
+  //   background-size: cover;
+  //   background-position: 50%;
+  // }
+
+  // &::after {
+  //   content: "";
+  //   height: 100%;
+  //   width: 100%;
+
+  //   position: absolute;
+  //   top: 0;
+  //   left: 0;
+  //   z-index: 2;
+
+  //   background-color: rgba(88, 99, 248, 0.3);
+  // }
+
+  // .dots {
+  //   width: 100%;
+  //   position: absolute;
+  //   transform: translateX(-50%);
+  //   left: 50%;
+  //   bottom: 6rem;
+  //   z-index: 5;
+
+  //   display: none;
+  //   @media only screen and (max-width: 520px) {
+  //     display: flex;
+  //   }
+  //   justify-content: center;
+
+  //   .dot {
+  //     width: 1.2rem;
+  //     height: 1.2rem;
+  //     border-radius: 50%;
+  //     background-color: grey;
+  //     border: none;
+
+  //     &:not(:last-child) {
+  //       margin-right: 2.4rem;
+  //     }
+
+  //     &:active,
+  //     &:focus {
+  //       background-color: white;
+  //     }
+  //   }
+  // }
+
+  // .slider {
+  //   width: 100%;
+  //   max-width: 1200px;
+  //   height: 400px;
+  //   display: flex;
+  //   overflow-x: auto;
+  //   overflow-y: hidden;
+  //   scroll-snap-type: x mandatory;
+  //   scroll-behavior: smooth;
+
+  //   position: relative;
+  //   z-index: 5;
+  // }
+
+  // .slide {
+  //   scroll-snap-align: center;
+  //   width: 100%;
+  //   flex-shrink: 0;
+  //   height: 100%;
+  //   overflow-y: hidden;
+
+  //   position: relative;
+  //   padding-left: 10rem;
+
+  //   font-family: "Poppins", sans-serif;
+  //   display: flex;
+  //   flex-direction: column;
+  //   justify-content: center;
+  //   align-items: flex-start;
+
+  //   & > * {
+  //     @media only screen and (max-width: 520px) {
+  //       transform: translateY(-2.5rem);
+  //     }
+  //   }
+
+  //   @media only screen and(max-width: 520px) {
+  //     padding-left: 5rem;
+  //   }
+
+  //   &__prev,
+  //   &__next {
+  //     @media only screen and(max-width: 520px) {
+  //       display: none;
+  //     }
+
+  //     text-decoration: none;
+  //     position: absolute;
+  //     top: 50%;
+  //     transform: translate(-50%, -50%);
+  //     font-size: 5rem;
+  //     font-weight: 500;
+  //     color: $white_color;
+  //   }
+
+  //   &__prev {
+  //     left: 3rem;
+  //   }
+
+  //   &__next {
+  //     right: 3rem;
+  //   }
+
+  //   &__paragraph {
+  //     color: $white_color;
+  //     font-weight: 100;
+  //     line-height: 2.4rem;
+  //     font-size: 1.8rem;
+  //     text-transform: uppercase;
+  //   }
+
+  //   &__h1 {
+  //     font-weight: 700;
+  //     color: $white_color;
+  //     font-size: 3.2rem;
+  //     line-height: 5.3rem;
+
+  //     @media only screen and (max-width: 360px) {
+  //       width: 211px;
+  //       line-height: 3.2rem;
+  //       margin-bottom: 1rem;
+  //     }
+  //   }
+
+  //   &__h4 {
+  //     color: $white_color;
+  //     font-weight: 500;
+  //     font-size: 1.8rem;
+  //     line-height: 2rem;
+  //   }
+
+  //   &__h5 {
+  //     font-size: 1.8rem;
+  //     font-weight: 100;
+  //     line-height: 2rem;
+  //     color: $white_color;
+  //   }
+
+  //   &__btn {
+  //     margin-top: 3.6rem;
+  //     border: 2px solid #ffffff;
+  //     border-radius: 4px;
+  //     color: $white_color;
+  //     font-size: 1.6rem;
+  //     font-weight: 700;
+  //     padding: 1.3rem 3rem;
+  //     text-align: center;
+  //     background-color: transparent;
+  //     cursor: pointer;
+  //     text-transform: uppercase;
+  //     outline: none;
+  //     transition: .2s ease-in-out all;
+
+  //     @media only screen and (max-width: 360px) {
+  //       margin-top: 2.5rem;
+  //     }
+
+  //     &:hover {
+  //       background-color: $white_color;
+  //       color: rgba(88, 99, 248, 0.5);
+  //     }
+  //   }
+  // }
 }
