--- a/styles/main.css
+++ b/styles/main.css
@@ -457,119 +457,43 @@ body {
   }
 }
 
+.swiper-button-next,
+.swiper-button-prev {
+  color: #fff !important;
+}
+
 .section-carousel {
   grid-column: full-start / full-end;
   -ms-grid-row: 2;
   -ms-grid-row-span: 1;
   grid-row: 2 / 3;
-  overflow-x: hidden;
-  overflow-y: hidden;
-  position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  background-color: rgba(3, 79, 151, 0.384);
 }
 
-.section-carousel .hide {
-  width: 100%;
-  height: 2rem;
-  background-color: white;
-  z-index: 10;
-  position: absolute;
-  bottom: -0.1rem;
-}
-
-.section-carousel::before {
-  content: "";
+.section-carousel .swiper-container {
+  z-index: 200;
   height: 100%;
-  width: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 1;
-  background-image: url("../../assets/img/JohnCleeseEricIdle.png");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: 50%;
-}
-
-.section-carousel::after {
-  content: "";
-  height: 100%;
-  width: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 2;
-  background-color: rgba(88, 99, 248, 0.3);
-}
-
-.section-carousel .dots {
-  width: 100%;
-  position: absolute;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
-  left: 50%;
-  bottom: 6rem;
-  z-index: 5;
-  display: none;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-@media only screen and (max-width: 520px) {
-  .section-carousel .dots {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-  }
-}
-
-.section-carousel .dots .dot {
-  width: 1.2rem;
-  height: 1.2rem;
-  border-radius: 50%;
-  background-color: grey;
-  border: none;
-}
-
-.section-carousel .dots .dot:not(:last-child) {
-  margin-right: 2.4rem;
-}
-
-.section-carousel .dots .dot:active, .section-carousel .dots .dot:focus {
-  background-color: white;
-}
-
-.section-carousel .slider {
-  width: 100%;
   max-width: 1200px;
-  height: 400px;
+}
+
+.section-carousel .swiper-container .swiper-wrapper {
+  height: 100%;
+}
+
+.section-carousel .swiper-container .swiper-wrapper .swiper-slide {
+  height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  overflow-x: auto;
-  overflow-y: hidden;
-  -ms-scroll-snap-type: x mandatory;
-      scroll-snap-type: x mandatory;
-  scroll-behavior: smooth;
-  position: relative;
-  z-index: 5;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
-.section-carousel .slide {
-  scroll-snap-align: center;
-  width: 100%;
-  -ms-flex-negative: 0;
-      flex-shrink: 0;
-  height: 100%;
-  overflow-y: hidden;
-  position: relative;
-  padding-left: 10rem;
+.section-carousel .swiper-container .swiper-wrapper .swiper-slide .slide {
   font-family: "Poppins", sans-serif;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -584,47 +508,10 @@ body {
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: flex-start;
+  margin-left: 15rem;
 }
 
-@media only screen and (max-width: 520px) {
-  .section-carousel .slide > * {
-    -webkit-transform: translateY(-2.5rem);
-            transform: translateY(-2.5rem);
-  }
-}
-
-@media only screen and (max-width: 520px) {
-  .section-carousel .slide {
-    padding-left: 5rem;
-  }
-}
-
-.section-carousel .slide__prev, .section-carousel .slide__next {
-  text-decoration: none;
-  position: absolute;
-  top: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  font-size: 5rem;
-  font-weight: 500;
-  color: #FFFFFF;
-}
-
-@media only screen and (max-width: 520px) {
-  .section-carousel .slide__prev, .section-carousel .slide__next {
-    display: none;
-  }
-}
-
-.section-carousel .slide__prev {
-  left: 3rem;
-}
-
-.section-carousel .slide__next {
-  right: 3rem;
-}
-
-.section-carousel .slide__paragraph {
+.section-carousel .swiper-container .swiper-wrapper .swiper-slide .slide__paragraph {
   color: #FFFFFF;
   font-weight: 100;
   line-height: 2.4rem;
@@ -632,7 +519,7 @@ body {
   text-transform: uppercase;
 }
 
-.section-carousel .slide__h1 {
+.section-carousel .swiper-container .swiper-wrapper .swiper-slide .slide__h1 {
   font-weight: 700;
   color: #FFFFFF;
   font-size: 3.2rem;
@@ -640,28 +527,28 @@ body {
 }
 
 @media only screen and (max-width: 360px) {
-  .section-carousel .slide__h1 {
+  .section-carousel .swiper-container .swiper-wrapper .swiper-slide .slide__h1 {
     width: 211px;
     line-height: 3.2rem;
     margin-bottom: 1rem;
   }
 }
 
-.section-carousel .slide__h4 {
+.section-carousel .swiper-container .swiper-wrapper .swiper-slide .slide__h4 {
   color: #FFFFFF;
   font-weight: 500;
   font-size: 1.8rem;
   line-height: 2rem;
 }
 
-.section-carousel .slide__h5 {
+.section-carousel .swiper-container .swiper-wrapper .swiper-slide .slide__h5 {
   font-size: 1.8rem;
   font-weight: 100;
   line-height: 2rem;
   color: #FFFFFF;
 }
 
-.section-carousel .slide__btn {
+.section-carousel .swiper-container .swiper-wrapper .swiper-slide .slide__btn {
   margin-top: 3.6rem;
   border: 2px solid #ffffff;
   border-radius: 4px;
@@ -674,17 +561,17 @@ body {
   cursor: pointer;
   text-transform: uppercase;
   outline: none;
-  -webkit-transition: .2s ease-in-out all;
-  transition: .2s ease-in-out all;
+  -webkit-transition: 0.2s ease-in-out all;
+  transition: 0.2s ease-in-out all;
 }
 
 @media only screen and (max-width: 360px) {
-  .section-carousel .slide__btn {
+  .section-carousel .swiper-container .swiper-wrapper .swiper-slide .slide__btn {
     margin-top: 2.5rem;
   }
 }
 
-.section-carousel .slide__btn:hover {
+.section-carousel .swiper-container .swiper-wrapper .swiper-slide .slide__btn:hover {
   background-color: #FFFFFF;
   color: rgba(88, 99, 248, 0.5);
 }
