--- a/styles/components/_carousel.scss
+++ b/styles/components/_carousel.scss
@@ -1,6 +1,10 @@
 .swiper-button-next,
 .swiper-button-prev {
   color: #fff !important;
+
+  @media only screen and (max-width: 520px) {
+    display: none !important;
+  }
 }
 
 .section-carousel {
@@ -33,6 +37,11 @@
           justify-content: center;
           align-items: flex-start;
           margin-left: 15rem;
+
+          @media only screen and (max-width: 520px) {
+            align-items: flex-start;
+            margin-left: 5rem;
+          }
 
           &__paragraph {
             color: $white_color;
