--- a/styles/main.css
+++ b/styles/main.css
@@ -474,7 +474,22 @@ body {
   -ms-grid-row: 2;
   -ms-grid-row-span: 1;
   grid-row: 2 / 3;
-  background-color: rgba(3, 79, 151, 0.384);
+  position: relative;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-image: url("../assets/img/JohnCleeseEricIdle.png");
+}
+
+.section-carousel::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(88, 99, 248, 0.5);
 }
 
 .section-carousel .swiper-container {
