--- a/styles/base/_base.scss
+++ b/styles/base/_base.scss
@@ -16,6 +16,6 @@ html {
 body {
     display: grid;
     grid-template-columns: [full-start] minmax(min-content, 1fr) [center-start] repeat(10, minmax(min-content, 12rem)) [center-end] minmax(min-content, 1fr) [full-end];
-    grid-template-rows: min-content 40rem .8fr min-content;
+    grid-template-rows: min-content 40vh .8fr min-content;
     height: 100vh;
 }
