--- a/styles/components/_gridbox.scss
+++ b/styles/components/_gridbox.scss
@@ -118,6 +118,8 @@
         padding: 1.2rem 3.3rem;
         text-align: center;
 
+        text-decoration: none;
+
         transition: 0.2s ease-in-out all;
 
         &:hover {
